Fix spacing on layout

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,11 +4,17 @@
   font-size: 3rem;
   color: #fff;
   margin-bottom: 50px;
-  line-height: 0;
+  line-height: 1;
 }
 
 h1 {
+  margin-top: 1rem;
+  margin-bottom: 0;
   padding-bottom: 1rem;
+}
+
+h4 {
+  margin: 0;
 }
 
 .scores {
@@ -20,4 +26,5 @@ p {
   font-size: 1.5rem;
   width: 50%;
   display: inline-block;
+  margin: 0;
 }
